--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "remote voting",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +18,9 @@
   },
   "homepage": "https://github.com/ShubhamAgarwal-11/Remote-Voting#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "express-ejs-layouts": "^2.5.1",
+    "node-sass-middleware": "^1.0.1"
   }
 }
